--- a/projeto4/assets/css/style.css
+++ b/projeto4/assets/css/style.css
@@ -2,6 +2,17 @@
     font-family: Arial, Helvetica;
     box-sizing: border-box;
 }
+
+:root{
+    --color0:#000000;
+    --color1:#1d75de;
+    --color2:#e032e6;
+    --color3:#ab0d1a;
+    --color4:#2b4c99;
+    --color5:;
+    --color6:;
+}
+
 body{    
     margin: 0;
     padding: 0;
@@ -10,7 +21,8 @@ body{
 header{
     display:flex;
     justify-content:center;
-    height: 120px;
+    height: 80px;
+    
 }
 
 .container{
@@ -24,6 +36,7 @@ header{
     align-items:center;
     width: 10px;
     height: 10px;
+    margin-top: 30px;
 }
 
 .menu{
@@ -65,6 +78,7 @@ nav a:hover{
     background-position: center;
     background-size: cover;
     height: 620px;
+    width: 100%;
 }
 
 .column{
@@ -105,21 +119,21 @@ nav a:hover{
 .banner2,
 .banner3 {
     flex: 1 ;
-    color:#ffffff;
+    color:black;
     padding: 20px;
+    background-color: grey;
 }
 
-.banner1{
-    background-color: #39aae1;
+.banner1,
+.banner2,
+.banner3 {
+    filter: alpha(opacity=70);
+        opacity: 0.7;
+        -moz-opacity: 0.7;
+        -webkit-opacity: 0.7;
 }
 
-.banner2{
-    background-color: #0079c7;
-}
 
-.banner3{
-    background-color: #2b4c99;
-}
 
 .banner_title{
     font-size: 21px;
@@ -129,6 +143,15 @@ nav a:hover{
     font-size: 12px;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+.banner_procurados, ul, li{
+    font-size: 12px;
+    margin-top: 10px; 
+    text-decoration: black;
+    text-transform: uppercase;
+    font-weight: bold;
+
 }
 
 .banner_options a {
@@ -168,12 +191,20 @@ nav a:hover{
     font-size: 21px;
     font-weight: bold;
 }
+.widget_body ul, a{
+    color: #000;
+    font-size: 21px;
+    font-weight: bold;
+    text-decoration: none;
+
+}
 
 .widget_title_bar {
     width: 50px;
     height: 2px;
-    background-color: #36a9e1;
+    background-color: #ab0d1a;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .flex {
@@ -247,19 +278,8 @@ footer {
     flex: 1 ;
     color: #ffffff;
     padding:20px;
+    background-color: var(--color4)
 } 
-
-.fm_1{
-    background-color: #39aae1;
-}
-
-.fm_2{
-    background-color: #0079c7;
-}
-
-.fm_3{
-    background-color: #2b4c99;
-}
 
 .footer_area {
     display: flex;
@@ -309,10 +329,24 @@ footer .widget_title_text {
 
 .barradepesquisa{
     height: 25px;
-    margin-top: 45px;
+    margin-top: 30px;
     margin-right: 10px;
 }
 
-.social_midia{
-    
+.footernav ul, li{
+    display: block ;
+    text-align: center;
 }
+
+
+.widget_body1 a{
+    text-decoration: none;
+    font-weight: lighter;
+}
+
+#noticia{
+    width: 80%;
+    display: block;
+    margin-left: 5%;
+}
+
