--- a/projeto4/assets/css/style.css
+++ b/projeto4/assets/css/style.css
@@ -16,6 +16,7 @@
 body{    
     margin: 0;
     padding: 0;
+    background-color: var(--color5);
 }
 
 header{
@@ -93,7 +94,7 @@ nav a:hover{
 }
 
 .banner_headline h1{
-    color: var(--color5);
+    color:#c8c3c3;
     font-size: 70px;
     text-shadow: 0px 1px 0px #555;
     margin: 0px;
@@ -101,7 +102,7 @@ nav a:hover{
     max-width: 350px;
 }
 .banner_headline h2{
-    color: var(--color5);
+    color: #c8c3c3;
     font-size: 21px;
     text-shadow: 0px 1px 0px #555;
     margin: 0px;
@@ -127,13 +128,31 @@ nav a:hover{
 .banner1,
 .banner2,
 .banner3 {
-    filter: alpha(opacity=70);
-        opacity: 0.7;
-        -moz-opacity: 0.7;
-        -webkit-opacity: 0.7;
+    filter: alpha(opacity=50);
+        opacity: 0.5;
+        -moz-opacity: 0.5;
+        -webkit-opacity: 0.5;
 }
 
+.banner1:hover {
+    filter: alpha(opacity=100);
+        opacity: 1.0;
+        -moz-opacity: 1.0;
+        -webkit-opacity: 1.0;
+} 
+.banner2:hover {
+    filter: alpha(opacity=100);
+        opacity: 1.0;
+        -moz-opacity: 1.0;
+        -webkit-opacity: 1.0;
+}
 
+.banner3:hover {
+    filter: alpha(opacity=100);
+        opacity: 1.0;
+        -moz-opacity: 1.0;
+        -webkit-opacity: 1.0;
+}
 
 .banner_title{
     font-size: 21px;
@@ -187,12 +206,12 @@ nav a:hover{
 }
 
 .widget_title_text, a{
-    color: var(--color5);
+    color: var(--color0);
     font-size: 21px;
     font-weight: bold;    
 }
 .widget_body ul, a{
-    color: var(--color5);
+    color: var(--color4);
     font-size: 21px;
     font-weight: bold;
     text-decoration: none;
@@ -266,7 +285,7 @@ article .news_resume {
 }
 
 footer {
-    background-color: var(--color0);
+    background-color: #2c2c2c;
     display: flex;
     justify-content: center;    
     padding-bottom: 0px;
@@ -351,6 +370,7 @@ footer .widget_title_text {
     width: 500px;
     display: block;
     margin-left: 10%;
+    color: var(--color0);
     
 }
 
